src/test/testFiles/invalid/semanticErrors/binaryTreeInvalidValueAssignment.manimdsl
let root = Node<number>(3);

root.right.value = true;